prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/integer_overflow_2.diag.txt
ERROR: integer constant overflow
testData/diagnostics/integer_overflow_2.nut:1:8

println(20496385583567863808)
        ^-------------------


